--- a/css/whatwedo.css
+++ b/css/whatwedo.css
@@ -57,17 +57,20 @@
   border: 0.5px solid rgba(0, 0, 0, 0.247);
   background-color: transparent;
   color: #2b2a2acc;
+  transition: all 500ms ease-out;
+  margin-bottom: 30px;
 }
 .text button:hover {
   background-image: linear-gradient(to right, #4ab5d8, #1ad3f4);
   color: #fff;
   border: none;
 }
-.card:hover {
-  opacity: 1;
-  transition: all 500s ease-out;
+.card:hover img {
+  transform: scale(0.9, 0.9);
 }
-.card:hover ~ .img {
-  animation: fadeInUp;
-  animation-duration: 20s;
+.card img {
+  transition: transform;
+}
+.card:hover {
+  box-shadow: 4px 4px 8px rgba(240, 240, 240, 0.5);
 }
